src/objects/Xero_Invoice_Line__c.object
<CustomObject>
    <description>Xero Importable Data</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Xero Invoice Lines</relationshipLabel>
        <relationshipName>Xero_Invoice_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agency Campaign</label>
        <referenceTo>Agency_Campaign__c</referenceTo>
        <relationshipLabel>Xero Invoice Lines</relationshipLabel>
        <relationshipName>Xero_Invoice_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Unit_Amount__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Amount__c</fullName>
        <label>Unit Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice__c</fullName>
        <label>Xero Invoice</label>
        <referenceTo>Xero_Invoice__c</referenceTo>
        <relationshipLabel>Xero Invoice Lines</relationshipLabel>
        <relationshipName>Xero_Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Xero Invoice Line</label>
    <nameField>
        <displayFormat>X-{0000000}</displayFormat>
        <label>Xero Invoice Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>